--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,76 +1,18 @@
+@import url("https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300..700&display=swap");
+
 :root {
-  --max-width: 1100px;
-  --border-radius: 12px;
-  --font-mono: ui-monospace, Menlo, Monaco, "Cascadia Mono", "Segoe UI Mono",
-    "Roboto Mono", "Oxygen Mono", "Ubuntu Monospace", "Source Code Pro",
-    "Fira Mono", "Droid Sans Mono", "Courier New", monospace;
+  --white: #fff;
+  --light-gray: #d9d9d9;
+  --dark-gray: #242424;
+  --black: #151515;
+  --primary: #4ee1a0;
 
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+  --heading-xl: 88px;
+  --heading-l: 48px;
+  --heading-m: 24px;
+  --text: 18px;
 
-  --primary-glow: conic-gradient(
-    from 180deg at 50% 50%,
-    #16abff33 0deg,
-    #0885ff33 55deg,
-    #54d6ff33 120deg,
-    #0071ff33 160deg,
-    transparent 360deg
-  );
-  --secondary-glow: radial-gradient(
-    rgba(255, 255, 255, 1),
-    rgba(255, 255, 255, 0)
-  );
-
-  --tile-start-rgb: 239, 245, 249;
-  --tile-end-rgb: 228, 232, 233;
-  --tile-border: conic-gradient(
-    #00000080,
-    #00000040,
-    #00000030,
-    #00000020,
-    #00000010,
-    #00000010,
-    #00000080
-  );
-
-  --callout-rgb: 238, 240, 241;
-  --callout-border-rgb: 172, 175, 176;
-  --card-rgb: 180, 185, 188;
-  --card-border-rgb: 131, 134, 135;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-
-    --primary-glow: radial-gradient(rgba(1, 65, 255, 0.4), rgba(1, 65, 255, 0));
-    --secondary-glow: linear-gradient(
-      to bottom right,
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0.3)
-    );
-
-    --tile-start-rgb: 2, 13, 46;
-    --tile-end-rgb: 2, 5, 19;
-    --tile-border: conic-gradient(
-      #ffffff80,
-      #ffffff40,
-      #ffffff30,
-      #ffffff20,
-      #ffffff10,
-      #ffffff10,
-      #ffffff80
-    );
-
-    --callout-rgb: 20, 20, 20;
-    --callout-border-rgb: 108, 108, 108;
-    --card-rgb: 100, 100, 100;
-    --card-border-rgb: 200, 200, 200;
-  }
+  --lr-margin: calc((165 / 1440) * 100vw);
 }
 
 * {
@@ -79,29 +21,422 @@
   margin: 0;
 }
 
-html,
 body {
-  max-width: 100vw;
+  font-family: "Space Grotesk", sans-serif;
+  background-color: var(--black);
+  color: var(--light-gray);
+  font-size: var(--text);
+}
+
+.title {
+  color: var(--white);
+}
+
+.header {
+  padding: 39px var(--lr-margin);
+}
+
+/* HERO */
+
+.container {
+  position: relative;
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
+  list-style: none;
+  justify-content: space-between;
+}
+
+.container--column {
+  flex-direction: column;
+  flex-wrap: nowrap;
+}
+
+.section {
+  position: relative;
+}
+
+.section__header .title {
+  font-size: var(--heading-xl);
+  color: var(--white);
+}
+
+.section--hero {
+  margin-top: calc(62px - 39px);
+  padding: 0 var(--lr-margin);
+  padding-top: 65px;
+  padding-bottom: 65px;
+}
+
+.section--skills {
+  padding-bottom: 55px;
+  margin-bottom: 95px;
   overflow-x: hidden;
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+.section--projects {
+  margin-top: 85px;
+  margin: 0 var(--lr-margin);
 }
 
-a {
-  color: inherit;
+.section--contact {
+  margin: auto;
+  margin-top: 139px;
+  padding: 84px var(--lr-margin);
+  background-color: var(--dark-gray);
+}
+
+.profile--tablet,
+.profile--mobile {
+  display: none;
+}
+
+.image-wrapper {
+  position: relative;
+}
+
+.image-wrapper img {
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  left: 0;
+  top: 0;
+}
+
+.section--hero .container {
+  height: calc(720px - 191px);
+}
+
+.section--hero .image-wrapper {
+  position: absolute;
+  width: 445px;
+  height: 720px;
+  top: calc(-1 * (119px + 65px + 23px));
+  right: 0;
+  z-index: 100;
+}
+
+.description {
+  position: absolute;
+  left: 0;
+  top: 0;
+  min-width: calc((706 / 1440) * 100vw);
+  z-index: 999;
+}
+.section--contact .section__header {
+  gap: 2.25rem;
+  width: calc((445 / 1440) * 100vw);
+}
+
+.description__title {
+  font-size: calc((88 / 1440) * 100vw);
+  color: var(--white);
+}
+
+.description__content {
+  width: 445px;
+  margin-top: 43px;
+  margin-bottom: 66px;
+}
+
+.underline {
+  position: relative;
+}
+
+.underline::after {
+  position: absolute;
+  content: "";
+  width: 100%;
+  height: 6px;
+  left: 0;
+  bottom: 0;
+  background-color: var(--primary);
+}
+
+/* SKILLS */
+
+.skill-list {
+  justify-content: space-between;
+  row-gap: 58px;
+  padding-top: 72px;
+  margin: 0 var(--lr-margin);
+}
+
+.skill-list::before {
+  position: absolute;
+  content: "";
+  width: 100%;
+  height: 1px;
+  top: 0;
+  left: 0;
+  background-color: var(--light-gray);
+}
+
+.skill-list__item {
+  width: 33%;
+}
+
+/* PROJECTS */
+
+.projects {
+  row-gap: 69px;
+  margin-top: 80px;
+  height: auto;
+}
+
+/* CONTACT */
+
+.section--contact .container {
+  align-items: flex-start;
+}
+
+.container.container--column.form--contact {
+  gap: 2rem;
+  width: calc((445 / 1440) * 100vw);
+}
+
+.submit-btn {
+  width: fit-content;
+  padding: 0;
+  margin-left: auto;
+  padding-bottom: 10px;
+  border: none;
+  border-bottom: solid 2px var(--primary);
+  background-color: transparent;
+  color: var(--white);
+  font-size: 16px;
+  font-weight: 700;
+  letter-spacing: 2.25px;
+  text-transform: uppercase;
   text-decoration: none;
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
+.submit-btn:hover {
+  cursor: pointer;
+  color: var(--primary);
+  transition: color 300ms;
+}
+
+/* FOOTER  */
+
+.footer {
+  padding: 0 var(--lr-margin);
+  background-color: var(--dark-gray);
+}
+
+.footer.sns {
+  margin-right: 0;
+}
+
+.icon {
+  object-fit: fill;
+  left: 0;
+  top: 0;
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  fill: #fff;
+  transition: fill 300ms;
+  &:hover {
+    fill: var(--primary);
+  }
+}
+
+@media all and (max-width: 1131px) {
+  :root {
+    --lr-margin: calc((30 / 766) * 100vw);
+    --heading-xl: 72px;
+  }
+
+  .section--hero {
+    margin-top: 25px;
+    padding-top: cacl(90px - 25px);
+    padding-bottom: 65px;
+    overflow-x: hidden;
+  }
+
+  .header {
+    padding-bottom: 0;
+    padding-top: 30px;
+  }
+
+  .profile--mobile,
+  .profile--desktop {
+    display: none;
+  }
+
+  .profile--tablet {
+    display: block;
+  }
+
+  .section--hero .image-wrapper {
+    position: absolute;
+    width: 322px;
+    height: 600px;
+    top: calc(-1 * (70px + 25px + 60px));
+    right: calc(-1 * var(--lr-margin));
+    z-index: 100;
+  }
+
+  .section--hero .container {
+    height: 449px;
+  }
+
+  .description {
+    width: calc((449 / 766) * 100vw);
+  }
+
+  .description__title {
+    font-size: calc((72 / 766) * 100vw);
+    letter-spacing: -2.05px;
+    line-height: 72px;
+  }
+
+  .description__content {
+    margin-top: 66px;
+    margin-bottom: 34px;
+  }
+
+  .skill-list__item {
+    width: 50%;
+  }
+
+  .section--contact .container {
+    flex-direction: column;
+    align-items: center;
+    margin: 0 auto;
+    width: 445px;
+    gap: 48px;
+    text-align: center;
+  }
+}
+
+@media all and (max-width: 640px) {
+  :root {
+    --lr-margin: calc((16 / 375) * 100vw);
+    --text: 16px;
+    --heading-xl: 40px;
+    --heading-l: 32px;
+  }
+
+  .section--skills {
+    padding-bottom: 80px;
+  }
+
+  .section--hero {
+    display: flex;
+    flex-direction: column-reverse;
+    height: auto;
+    padding: 0;
+  }
+
+  .section--contact {
+    margin-top: 80px;
+    padding-top: 60px;
+    padding-bottom: 87px;
+  }
+
+  .profile--tablet,
+  .profile--desktop {
+    display: none;
+  }
+
+  .profile--mobile {
+    display: block;
+  }
+
+  .section--hero .container {
+    align-items: center;
+    flex-direction: column-reverse;
+    height: auto;
+    overflow-y: hidden;
+  }
+
+  .section--hero .description {
+    position: relative;
+    width: auto;
+    text-align: center;
+    margin: 0 16px;
+    margin-top: calc(423px - 101px);
+    margin-bottom: 80px;
+    height: auto;
+  }
+
+  .section--hero .description__content {
+    width: auto;
+  }
+
+  .section--hero .image-wrapper {
+    position: absolute;
+    width: 174px;
+    height: 383px;
+  }
+
+  .description__title {
+    font-size: calc((40 / 375) * 100vw);
+    letter-spacing: -2.05px;
+    line-height: 72px;
+  }
+
+  .description__content {
+    margin-top: 24px;
+    margin-bottom: 24px;
+  }
+
+  .section--hero .image-wrapper {
+    position: absolute;
+    display: block;
+    width: 174px;
+    height: 383px;
+    top: 50px;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 100;
+  }
+
+  .section--hero .decoration--circle {
+    left: calc(((174 + (((375 - 174) / 2) - (129 / 2))) / 375) * 100vw);
+  }
+
+  .skill-list {
+    padding-top: 40px;
+    padding-bottom: 40px;
+  }
+
+  .skill-list::after {
+    position: absolute;
+    content: "";
+    width: 100%;
+    height: 1px;
+    background-color: var(--light-gray);
+    bottom: 0;
+    left: 0;
+  }
+
+  .projects {
+    flex-direction: column;
+    /* flex-wrap: nowrap; */
+    margin-top: 40px;
+    gap: 40px;
+  }
+
+  .skill-list {
+    flex-direction: column;
+    align-items: center;
+    row-gap: 24px;
+  }
+
+  .skill-list__item {
+    width: 100%;
+    text-align: center;
+  }
+
+  .section--contact .container {
+    width: 100%;
+  }
+
+  .section--contact .section__header {
+    width: auto;
+    gap: 1.5rem;
   }
 }
